0000115: Date displayed for "Submitted" and "Last Modification" incorrect
Fix date parsing. Debug logging is enhanced. As a side effect, fixes a nasty performance regression where the tasks would always be considered stale.

https://sourceforge.net/apps/mantisbt/mylyn-mantis/view.php?id=115